# verify_contracts_collection

./: Cargo.toml  Justfile  README.md  rust-toolchain.toml
community/: Cargo.toml  build.rs
community-factory/: Cargo.toml  build.rs
discussions/: Cargo.toml
tests/migration/snapshots/: tests__migration__deploy_contract_self_upgrade-2.snap
tests/rfps/: mod.rs
tests/test_env/: mod.rs
workspace_root_folder/: Cargo.toml
workspace_root_folder/factory/: Cargo.toml  build.rs
workspace_root_folder/factory/src/: deploy.rs  lib.rs
workspace_root_folder/product-donation/: Cargo.toml
