[workspace]
members = ["devhub_common", "discussions", "community", "community-factory"]

[workspace.package]
repository = "https://github.com/NEAR-DevHub/neardevhub-contract"

[workspace.dependencies]
near-sdk = "5.5.0"
near-contract-standards = "5.5.0"
devhub_common = { path = "./devhub_common" }
cargo-near-build = { version = "0.4.3" }

[package]
name = "devhub"
version = "0.2.0"
authors = ["NEAR DevHub <neardevhub.org>"]
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["cdylib"]

# fields to configure build with WASM reproducibility, according to specs  
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md 
[package.metadata.near.reproducible_build]
# image from cargo-near pull#198
image = "sourcescan/cargo-near:0.13.2-rust-1.84.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:b41cb89907f92b114da9e2be4e109bff30ab792c22ddcbd2a4cff8e340cb9acb"
passed_env = []
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]

[dependencies]
near-sdk = { workspace = true, features = ["unstable"] }
near-contract-standards.workspace = true
serde_json = { version = "1.0", features = ["preserve_order"] }
devhub_common.workspace = true
html-escape = "0.2.13"

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
insta = { version = "1.31.0", features = ["json", "redactions"] }
regex = "1"
near-workspaces = { version = "0.17.0", features = [
  "unstable",
], default-features = false }
tokio = { version = "1.10.0", features = ["full"] }
anyhow = "1.0"

# this profile is important as it applies to contract members of workspace: 
# ["discussions", "community", "community-factory"]
[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[patch.crates-io]
near-workspaces = { git = "https://github.com/near/workspaces-rs.git", rev = "8595a9fb5961893b16fd9af3627179f6fc8405cf" }
