[workspace]
members = ["devhub_common", "discussions", "community", "community-factory"]

[workspace.package]
repository = "https://github.com/dj8yfo/verify_contracts_collection"

[workspace.dependencies]
near-sdk = "5.12.0"
near-contract-standards = "5.12.0"
devhub_common = { path = "./devhub_common" }


[package]
name = "devhub"
version = "0.2.0"
authors = ["NEAR DevHub <neardevhub.org>"]
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["cdylib"]

# fields to configure build with WASM reproducibility, according to specs  
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md 
[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "dj8yfo/sourcescan:0.14.1-rust-1.85.1"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:a81ec74eefe76144e7065604e5607bc0fb873aea05b3b92fdf395a646b0ecd61"
# build command inside of docker container
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = [
  "cargo",
  "near",
  "build",
  "non-reproducible-wasm",
  "--locked",
]

[dependencies]
near-sdk = { workspace = true, features = ["unstable"] }
near-contract-standards.workspace = true
serde_json = { version = "1.0", features = ["preserve_order"] }
devhub_common.workspace = true
html-escape = "0.2.13"

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
insta = { version = "1.31.0", features = ["json", "redactions"] }
regex = "1"
near-workspaces = { version = "0.17.0", features = [
  "unstable",
], default-features = false }
tokio = { version = "1.10.0", features = ["full"] }
anyhow = "1.0"

# this profile is important as it applies to contract members of workspace: 
# ["discussions", "community", "community-factory"]
[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
