[package]
name = "devhub-community-factory"
version = "0.1.0"
authors = ["NEAR DevHub <neardevhub.org>"]
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["cdylib"]

# fields to configure build with WASM reproducibility, according to specs  
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md 
[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "dj8yfo/sourcescan:0.14.1-rust-1.85.1"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:a81ec74eefe76144e7065604e5607bc0fb873aea05b3b92fdf395a646b0ecd61"
# build command inside of docker container
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[dependencies]
near-sdk.workspace = true
devhub_common.workspace = true

[build-dependencies]
bs58 = "0.5.1"
sha2 = "0.10.8"
