[package]
name = "devhub-community-factory"
version = "0.1.0"
authors = ["NEAR DevHub <neardevhub.org>"]
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["cdylib"]

# fields to configure build with WASM reproducibility, according to specs  
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md 
[package.metadata.near.reproducible_build]
# image from cargo-near pull#198
image = "sourcescan/cargo-near:0.14.1-rust-1.86.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:eaac91be3119cc7c136b6f375f2d3e092001f717ed6151ccc9d5348c2d6a640c"
# build command inside of docker container
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[dependencies]
near-sdk.workspace = true
devhub_common.workspace = true

[build-dependencies]
cargo-near-build = { git = "https://github.com/dj8yfo/cargo-near.git", rev = "01072b9b5fdac3dbe1b26bcc1bb9dae3bff5674d", version = "0.5.1" }
