[package]
name = "devhub-community"
version = "0.1.0"
authors = ["NEAR DevHub <neardevhub.org>"]
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cargo-near-build = { git = "https://github.com/dj8yfo/cargo-near.git", rev = "01072b9b5fdac3dbe1b26bcc1bb9dae3bff5674d", version = "0.5.1" }


[dependencies]
near-sdk.workspace = true
devhub_common.workspace = true
