[package]
name = "devhub-discussions"
version = "0.1.0"
authors = ["NEAR DevHub <neardevhub.org>"]
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["cdylib"]

# fields to configure build with WASM reproducibility, according to specs  
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md 
[package.metadata.near.reproducible_build]
# image from cargo-near pull#198
image = "sourcescan/cargo-near:0.13.2-rust-1.84.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:b41cb89907f92b114da9e2be4e109bff30ab792c22ddcbd2a4cff8e340cb9acb"
passed_env = []
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]

[dependencies]
near-sdk.workspace = true
devhub_common.workspace = true
