[workspace]
members = [
    "factory",
    "product-donation",
]
resolver = "2"

[workspace.dependencies]
near-sdk = { version = "5.9.0" }

[workspace.package]
repository = "https://github.com/dj8yfo/verify_contracts_collection"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
