[package]
name = "simple-factory"
description = "This is a `simple_factory/factory` contract, to be verified in ci of `near-verify-rs` repository"
version = "1.0.0"
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# fields to configure build with WASM reproducibility, according to specs
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md
# image from sourcescan:latest
# image from cargo-near pull#198
[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "dj8yfo/sourcescan:0.x.x-dev-wasm-output-path-1.85.1"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:308d9d714d2540b7c4c9201235b020761cdbdff18575719746b1a2ec82d64332"
# build command inside of docker container
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[build-dependencies]
env_logger = "0.9"
log = "0.4"

[build-dependencies.cargo-near-build]
version = "0.4.5"
features = ["build_script"]
git = "https://github.com/dj8yfo/cargo-near.git"
rev = "69d5dadc7a6e877c28ee0d313e5ad4ca3da89e25"

[dependencies]
near-sdk = { workspace = true, features = ["unstable"] }

[dev-dependencies.cargo-near-build]
version = "0.4.5"
git = "https://github.com/dj8yfo/cargo-near.git"
rev = "69d5dadc7a6e877c28ee0d313e5ad4ca3da89e25"

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
env_logger = "0.9"
