[package]
name = "simple-factory"
description = "This is a `simple_factory/factory` contract, to be verified in ci of `near-verify-rs` repository"
version = "1.0.0"
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# fields to configure build with WASM reproducibility, according to specs
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md
# image from sourcescan:latest
# image from cargo-near pull#198
[package.metadata.near.reproducible_build]
# image from cargo-near pull#198
image = "sourcescan/cargo-near:0.14.1-rust-1.86.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:eaac91be3119cc7c136b6f375f2d3e092001f717ed6151ccc9d5348c2d6a640c"
# build command inside of docker container
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
passed_env = ["KEY", "GOOGLE_QUERY"]
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[build-dependencies]
cargo-near-build = { git = "https://github.com/dj8yfo/cargo-near.git", rev = "01072b9b5fdac3dbe1b26bcc1bb9dae3bff5674d", version = "0.5.1" }


[dependencies]
near-sdk = { workspace = true, features = ["unstable"] }

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
env_logger = "0.9"
