[package]
name = "simple-factory-product"
description = "This is a `simple_factory/product` contract, to be verified in ci of `near-verify-rs` repository"
version = "1.1.0"
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = { workspace = true, features = ["legacy"] }

[dev-dependencies]
near-sdk = { workspace = true }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
